# narratio

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  REVIEW.md  SECURITY.md  dev.sh  narrative_prd.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-01-phase0-implementation.md  2026-03-01-phase0-pipeline-proof-design.md  2026-03-01-phase1-implementation.md  2026-03-01-phase1-revised-prd.md  2026-03-01-phase1-streamlit-design.md
docs/superpowers/plans/: 2026-07-17-repository-cleanup.md
docs/superpowers/specs/: 2026-07-17-repository-cleanup-design.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/narratives/[id]/: page.tsx
frontend/src/components/: ArisingTab.tsx  ArticlesTab.tsx  CoversTab.tsx  MapTab.tsx  NarrativeTable.tsx  StatsTab.tsx  Table.tsx  ThemeToggle.tsx  TimelineChart.tsx  articlesSearch.mjs  articlesSearch.test.mjs
frontend/src/lib/: api.ts  format.ts  theme.tsx
narratio/: __init__.py  _run_app.py  api.py  app.py  backfill.py  cluster.py  config.py  countries.py  country_data.json  data.py  db.py  embed.py  ingest.py  ingest_guardian.py  label.py  openrouter.py  pipeline.py  report.py  scrape_covers.py  scrape_covers_node.js  sentiment.py  summarize.py
tests/: test_api.py  test_api_contract.py  test_cluster.py  test_config.py  test_data.py  test_db.py  test_embed.py  test_ingest.py  test_ingest_guardian.py  test_label.py  test_pipeline.py  test_report.py  test_sentiment.py  test_summarize.py
