[project]
name = "narratio"
version = "0.1.0"
description = "Financial narrative tracking pipeline"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "hdbscan>=0.8.40",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
narratio = "narratio.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
