[project]
name = "narratio"
version = "0.1.0"
description = "Financial narrative tracking pipeline"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "hdbscan>=0.8.40",
    "umap-learn>=0.5",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pandas>=2.2",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
narratio = "narratio.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
