[project]
name = "narratio"
version = "0.1.0"
description = "Financial narrative tracking pipeline"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "hdbscan>=0.8.40",
    "umap-learn>=0.5",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "fastapi>=0.115",
    "starlette>=1.3.1",
    "uvicorn>=0.34",
    "pandas>=2.2",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[dependency-groups]
dev = [
    "httpx2>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
narratio = "narratio.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
